--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
               <img src="img/logo.png" alt=""> 
             </a>
          </div>
-         <div class="header_list">
+         <div class="header_list1">
             <ul>
                <li><a href="home.html">home</a></li>
                <li><a href="about.html">about</a></li>
