--- a/about.html
+++ b/about.html
@@ -16,9 +16,9 @@
               <img src="img/logo.png" alt=""> 
             </a>
          </div>
-         <div class="header_list1">
+         <div class="header_list122">
             <ul>
-               <li><a href="home.html">home</a></li>
+               <li><a href="home.html">home55</a></li>
                <li><a href="about.html">about</a></li>
                <li><a href="portfolio.html">portfolio</a></li>
                <li><a href="">blog</a></li>
