correct slash and list styles

--- a/home.html
+++ b/home.html
@@ -43,22 +43,22 @@
       </div>
    </header>
 
-   <section class="home_portfolio">
+   <div class="home_portfolio">
       <div class="portfolio_wrapper">
          <div class="portfolio_nav">
             <ul>
                <li><a href="">all</a></li>
-               <span class="slash"></span>
+               <li class="slash"></li>
                <li><a href="">logo</a></li>
-               <span class="slash"></span>
+               <li class="slash"></li>
                <li><a href="">mobile app</a></li>
-               <span class="slash"></span>
+               <li class="slash"></li>
                <li><a href="">wordpress</a></li>
-               <span class="slash"></span>
+               <li class="slash"></li>
                <li><a href="">web design</a></li>
-               <span class="slash"></span>
+               <li class="slash"></li>
                <li><a href="">ui/ix</a></li>
-               <span class="slash"></span>
+               <li class="slash"></li>
                <li><a href="">branding</a></li>
             </ul>
          </div>
@@ -125,7 +125,7 @@
             <button>load more</button>
          </div>
       </div>
-   </section>
+   </div>
 
    <footer>
       <div class="footer_logo">
