--- a/blog.html
+++ b/blog.html
@@ -23,7 +23,7 @@
                <li><a href="home.html">home</a></li>
                <li><a href="about.html">about</a></li>
                <li><a href="portfolio.html">portfolio</a></li>
-               <li><a href="">blog</a></li>
+               <li><a href="blog.html">blog</a></li>
                <li><a href="contact.html">contact</a></li>
                <li><i class="fas fa-search"></i></li>
             </ul>
