--- a/home.html
+++ b/home.html
@@ -11,6 +11,22 @@
 </head>
 <body>
    <header>
+      <div class="burger-menu_contant">
+			<div class="burger-menu">
+				<div class="burger-menu__button">
+					<span class="burger-menu__lines"></span>
+				</div>
+				<nav class="burger-menu__nav">
+					<a href="home.html" class="burger-menu__link">home</a>
+					<a href="about.html" class="burger-menu__link">about</a>
+					<a href="portfolio.html" class="burger-menu__link">portfolio</a>
+					<a href="blog.html" class="burger-menu__link">blog</a>
+					<a href="contact.html" class="burger-menu__link">contact</a>
+				</nav>
+				<div class="burger-menu__overlay"></div>
+			</div>
+		</div>
+
       <div class="header_menu">
          <div class="header_logo">
             <a href="home.html">
@@ -22,7 +38,7 @@
                <li><a href="home.html">home</a></li>
                <li><a href="about.html">about</a></li>
                <li><a href="portfolio.html">portfolio</a></li>
-               <li><a href="">blog</a></li>
+               <li><a href="blog.html">blog</a></li>
                <li><a href="contact.html">contact</a></li>
                <li><i class="fas fa-search"></i></li>
             </ul>
@@ -150,6 +166,6 @@
          <span class="pharagraph-grey">by ThemeForces. All Rights Reserved.</span>
       </h2>
    </footer>
-   
+   <script src="js/home.js"></script>
 </body>
 </html>
