--- a/blog.html
+++ b/blog.html
@@ -6,12 +6,29 @@
    <link href="style/about.css" rel="stylesheet" type="text/css">
    <link href="style/single_post.css" rel="stylesheet" type="text/css">
    <link href="style/blog.css" rel="stylesheet" type="text/css">
+   <link href="media/media_queries_home.css" rel="stylesheet" type="text/css">
    <script src="https://kit.fontawesome.com/5ee135209c.js"></script>
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Lian</title>
 </head>
 <body>
    <header>
+      <div class="burger-menu_contant">
+			<div class="burger-menu">
+				<div class="burger-menu__button">
+					<span class="burger-menu__lines"></span>
+				</div>
+				<nav class="burger-menu__nav">
+					<a href="home.html" class="burger-menu__link">home</a>
+					<a href="about.html" class="burger-menu__link">about</a>
+					<a href="portfolio.html" class="burger-menu__link">portfolio</a>
+					<a href="blog.html" class="burger-menu__link">blog</a>
+					<a href="contact.html" class="burger-menu__link">contact</a>
+				</nav>
+				<div class="burger-menu__overlay"></div>
+			</div>
+		</div>
+
       <div class="header_menu">
          <div class="header_logo">
             <a href="home.html">
@@ -403,6 +420,6 @@
          <span class="pharagraph-grey">by ThemeForces. All Rights Reserved.</span>
       </h2>
    </footer>
-   
+   <script src="js/home.js"></script>
 </body>
 </html>
