--- a/about.html
+++ b/about.html
@@ -4,12 +4,30 @@
    <meta charset="UTF-8">
    <link href="style/home.css" rel="stylesheet" type="text/css">
    <link href="style/about.css" rel="stylesheet" type="text/css">
+   <link href="media/media_queries_home.css" rel="stylesheet" type="text/css">
+   <link href="media/media_queries_about.css" rel="stylesheet" type="text/css">
    <script src="https://kit.fontawesome.com/5ee135209c.js"></script>
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Lian</title>
 </head>
 <body>
    <header>
+      <div class="burger-menu_contant">
+			<div class="burger-menu">
+				<div class="burger-menu__button">
+					<span class="burger-menu__lines"></span>
+				</div>
+				<nav class="burger-menu__nav">
+					<a href="home.html" class="burger-menu__link">home</a>
+					<a href="about.html" class="burger-menu__link">about</a>
+					<a href="portfolio.html" class="burger-menu__link">portfolio</a>
+					<a href="blog.html" class="burger-menu__link">blog</a>
+					<a href="contact.html" class="burger-menu__link">contact</a>
+				</nav>
+				<div class="burger-menu__overlay"></div>
+			</div>
+		</div>
+
       <div class="header_menu">
          <div class="header_logo">
             <a href="home.html">
@@ -43,7 +61,6 @@
          <div class="about_our_story_img">
             <img src="img/team.png" alt="">
          </div>
-
          <div class="about_our_story_info">
             <div class="about_our_story_content">
                <h2>
@@ -206,6 +223,6 @@
          <span class="pharagraph-grey">by ThemeForces. All Rights Reserved.</span>
       </h2>
    </footer>
-      
+   <script src="js/home.js"></script>
 </body>
 </html>
