--- a/home.html
+++ b/home.html
@@ -3,29 +3,14 @@
 <head>
    <meta charset="UTF-8">
    <link href="style/home.css" rel="stylesheet" type="text/css">
-   <link href="style/about.css" rel="stylesheet" type="text/css">
-   <link href="style/media_queries_home.css" rel="stylesheet" type="text/css">
+   <link href="media/media_queries_home.css" rel="stylesheet" type="text/css">
    <script src="https://kit.fontawesome.com/5ee135209c.js"></script>
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Lian</title>
 </head>
 <body>
    <header>
-      <div class="burger-menu_contant">
-			<div class="burger-menu">
-				<div class="burger-menu__button">
-					<span class="burger-menu__lines"></span>
-				</div>
-				<nav class="burger-menu__nav">
-					<a href="home.html" class="burger-menu__link">home</a>
-					<a href="about.html" class="burger-menu__link">about</a>
-					<a href="portfolio.html" class="burger-menu__link">portfolio</a>
-					<a href="blog.html" class="burger-menu__link">blog</a>
-					<a href="contact.html" class="burger-menu__link">contact</a>
-				</nav>
-				<div class="burger-menu__overlay"></div>
-			</div>
-		</div>
+      
 
       <div class="header_menu">
          <div class="header_logo">
@@ -42,6 +27,22 @@
                <li><a href="contact.html">contact</a></li>
                <li><i class="fas fa-search"></i></li>
             </ul>
+         </div>
+
+         <div class="burger-menu_contant">
+            <div class="burger-menu">
+               <div class="burger-menu__button">
+                  <span class="burger-menu__lines"></span>
+               </div>
+               <nav class="burger-menu__nav">
+                  <a href="home.html" class="burger-menu__link">home</a>
+                  <a href="about.html" class="burger-menu__link">about</a>
+                  <a href="portfolio.html" class="burger-menu__link">portfolio</a>
+                  <a href="blog.html" class="burger-menu__link">blog</a>
+                  <a href="contact.html" class="burger-menu__link">contact</a>
+               </nav>
+               <div class="burger-menu__overlay"></div>
+            </div>
          </div>
       </div>
       
@@ -63,19 +64,19 @@
       <div class="portfolio_wrapper">
          <div class="portfolio_nav">
             <ul>
-               <li><a href="">all</a></li>
+               <li class="list_tag"><a href="">all</a></li>
                <li class="slash"></li>
-               <li><a href="">logo</a></li>
+               <li class="list_tag"><a href="">logo</a></li>
                <li class="slash"></li>
-               <li><a href="">mobile app</a></li>
+               <li class="list_tag"><a href="">mobile app</a></li>
                <li class="slash"></li>
-               <li><a href="">wordpress</a></li>
+               <li class="list_tag"><a href="">wordpress</a></li>
                <li class="slash"></li>
-               <li><a href="">web design</a></li>
+               <li class="list_tag"><a href="">web design</a></li>
                <li class="slash"></li>
-               <li><a href="">ui/ix</a></li>
+               <li class="list_tag"><a href="">ui/ix</a></li>
                <li class="slash"></li>
-               <li><a href="">branding</a></li>
+               <li class="list_tag"><a href="">branding</a></li>
             </ul>
          </div>
 
