--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,8 @@
    <link href="style/single_post.css" rel="stylesheet" type="text/css">
    <link href="style/contact.css" rel="stylesheet" type="text/css">
    <link href="media/media_queries_home.css" rel="stylesheet" type="text/css">
+   <link href="media/media_queries_about.css" rel="stylesheet" type="text/css">
+   <link href="media/media_queries_single_post.css" rel="stylesheet" type="text/css">
    <script src="https://kit.fontawesome.com/5ee135209c.js"></script>
    <title>Lian</title>
 </head>
