--- a/about.html
+++ b/about.html
@@ -27,7 +27,6 @@
 				<div class="burger-menu__overlay"></div>
 			</div>
 		</div>
-
       <div class="header_menu">
          <div class="header_logo">
             <a href="home.html">
@@ -39,23 +38,19 @@
                <li><a href="home.html">home</a></li>
                <li><a href="about.html">about</a></li>
                <li><a href="portfolio.html">portfolio</a></li>
-               <li><a href="">blog</a></li>
+               <li><a href="blog.html">blog</a></li>
                <li><a href="contact.html">contact</a></li>
                <li><i class="fas fa-search"></i></li>
             </ul>
          </div>
       </div>
-      
       <div class="header_lian_agency">
          <div class="header_lian_agency_wrapper-about">
             <h1>about the agency</h1>
-            <h2>
-               Welcome to Lian
-            </h2>
+            <h2>Welcome to Lian</h2>
          </div>
       </div>
    </header>
-
    <section class="about_the_agency">
       <div class="about_our_story_wrapper">
          <div class="about_our_story_img">
@@ -63,9 +58,7 @@
          </div>
          <div class="about_our_story_info">
             <div class="about_our_story_content">
-               <h2>
-                  our story
-               </h2>
+               <h2>our story</h2>
                <p>
                   Lorem ipsum dolor sit amet, consectetuer 
                   adipiscing elit, sed diam nonummy nibh 
@@ -86,7 +79,6 @@
                <h2>our skills</h2>
                <div class="about_skills">
                   <div class="about_skills_wrapper">
-
                      <div class="skill_article">
                         <span class="skill-name">Photoshop</span>
                         <div class="tooltip_point90">
@@ -137,15 +129,11 @@
                   </div>
                </div>          
             </div>
-
          </div>
       </div>
-
       <div class="about_the_team">
          <div class="about_the_team_title">
-            <h2>
-               awesome team
-            </h2>
+            <h2>awesome team</h2>
             <p>
                Lorem ipsum dolor sit amet, consectetuer 
                adipiscing elit, sed diam nonummy nibh 
@@ -155,7 +143,6 @@
                suscipit. 
             </p>
          </div>
-
          <div class="about_the_team_members">
             <div class="about_the_team_item">
                <img src="img/member1.png" alt="">
@@ -168,9 +155,7 @@
                      mod tinci 
                   </p>
                </div>
-               
             </div>
-
             <div class="about_the_team_item">
                <img src="img/member2.png" alt="">
                <div class="team_member_about">
@@ -183,7 +168,6 @@
                   </p>
                </div>
             </div>
-
             <div class="about_the_team_item">
                <img src="img/member3.png" alt="">
                <div class="team_member_about">
@@ -199,7 +183,6 @@
          </div>
       </div>
    </section>
-
    <footer>
       <div class="footer_logo">
          <a href="home.html">
