--- a/home.html
+++ b/home.html
@@ -10,8 +10,6 @@
 </head>
 <body>
    <header>
-      
-
       <div class="header_menu">
          <div class="header_logo">
             <a href="home.html">
@@ -28,7 +26,6 @@
                <li><i class="fas fa-search"></i></li>
             </ul>
          </div>
-
          <div class="burger-menu_contant">
             <div class="burger-menu">
                <div class="burger-menu__button">
@@ -45,13 +42,11 @@
             </div>
          </div>
       </div>
-      
       <div class="header_lian_agency">
          <div class="header_lian_agency_wrapper">
             <h1>lian creative agency</h1>
             <h2>Minimal Freelance Portfolio</h2>
          </div>
-
          <div class="bottom_slider">
             <div class="point_slider pointer_slider_active"></div>
             <div class="point_slider"></div>
@@ -60,7 +55,7 @@
       </div>
    </header>
 
-   <div class="home_portfolio">
+   <section class="home_portfolio">
       <div class="portfolio_wrapper">
          <div class="portfolio_nav">
             <ul>
@@ -86,63 +81,53 @@
                   <div class="portf_overlay"></div>
                   <img src="img/home1/home1.png" alt="">
                </div>
-
                <div class="portfolio_img_with_overlay">
                   <img src="img/home1/home2.png" alt="">
                   <div class="portf_overlay"></div>
                </div>
-
                <div class="portfolio_img_with_overlay">
                   <img src="img/home1/home3.png" alt="">
                   <div class="portf_overlay"></div>
                </div>
             </div>
-
             <div class="portfolio_images_wrapper">
                <div class="portfolio_img_with_overlay">
                   <img src="img/home2/home4.png" alt="">
                   <div class="portf_overlay"></div>
                </div>
-
                <div class="portfolio_img_with_overlay">
                   <img src="img/home2/home5.png" alt="">
                   <div class="portf_overlay"></div>
                </div>
-
                <div class="portfolio_img_with_overlay">
                   <img src="img/home2/home6.png" alt="">
                   <div class="portf_overlay"></div>
                </div>
-
                <div class="portfolio_img_with_overlay">
                   <img src="img/home2/home7.png" alt="">
                   <div class="portf_overlay"></div>
                </div>
             </div>
-
             <div class="portfolio_images_wrapper">
                <div class="portfolio_img_with_overlay">
                   <img src="img/home3/home8.png" alt="">
                   <div class="portf_overlay"></div>
                </div>
-
                <div class="portfolio_img_with_overlay">
                   <img src="img/home3/home9.png" alt="">
                   <div class="portf_overlay"></div>
                </div>
-
                <div class="portfolio_img_with_overlay">
                   <img src="img/home3/home10.png" alt="">
                   <div class="portf_overlay"></div>
                </div>
             </div>
          </div>
-
          <div class="portfolio_button">
             <button>load more</button>
          </div>
       </div>
-   </div>
+   </section>
 
    <footer>
       <div class="footer_logo">
