--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,6 @@
 				<div class="burger-menu__overlay"></div>
 			</div>
 		</div>
-
       <div class="header_menu">
          <div class="header_logo">
             <a href="home.html">
@@ -47,17 +46,13 @@
             </ul>
          </div>
       </div>
-      
       <div class="header_lian_agency">
          <div class="header_lian_agency_wrapper-about">
             <h1>latest projects</h1>
-            <h2>
-               we deliver quality
-            </h2>
+            <h2>we deliver quality</h2>
          </div>
       </div>
    </header>
-
    <div class="home_portfolio">
       <div class="portfolio_wrapper">
          <div class="portfolio_nav">
@@ -77,65 +72,54 @@
                <li class="list_tag"><a href="">branding</a></li>
             </ul>
          </div>
-
          <div class="portfolio_images">
             <div class="portfolio_images_wrapper">
                <div class="portfolio_img_with_overlay">
                   <div class="portf_overlay"></div>
                   <img src="img/home1/home1.png" alt="">
                </div>
-
                <div class="portfolio_img_with_overlay">
                   <img src="img/home1/home2.png" alt="">
                   <div class="portf_overlay"></div>
                </div>
-
                <div class="portfolio_img_with_overlay">
                   <img src="img/home1/home3.png" alt="">
                   <div class="portf_overlay"></div>
                </div>
             </div>
-
             <div class="portfolio_images_wrapper">
                <div class="portfolio_img_with_overlay">
                   <img src="img/home2/home4.png" alt="">
                   <div class="portf_overlay"></div>
                </div>
-
                <div class="portfolio_img_with_overlay">
                   <img src="img/home2/home5.png" alt="">
                   <div class="portf_overlay"></div>
                </div>
-
                <div class="portfolio_img_with_overlay">
                   <img src="img/home2/home6.png" alt="">
                   <div class="portf_overlay"></div>
                </div>
-
                <div class="portfolio_img_with_overlay">
                   <img src="img/home2/home7.png" alt="">
                   <div class="portf_overlay"></div>
                </div>
             </div>
-
             <div class="portfolio_images_wrapper">
                <div class="portfolio_img_with_overlay">
                   <img src="img/home3/home8.png" alt="">
                   <div class="portf_overlay"></div>
                </div>
-
                <div class="portfolio_img_with_overlay">
                   <img src="img/home3/home9.png" alt="">
                   <div class="portf_overlay"></div>
                </div>
-
                <div class="portfolio_img_with_overlay">
                   <img src="img/home3/home10.png" alt="">
                   <div class="portf_overlay"></div>
                </div>
             </div>
          </div>
-
          <div class="portfolio_button">
             <button>load more</button>
          </div>
